<resources>
    <string name="action_record_audio_permission">ACTION_RECORD_AUDIO_PERMISSION</string>
    <string name="default_swipe_sensitivity">50</string>
    <string name="pref_app_version_key">APP_VERSION</string>
    <string name="pref_auto_caps_default">true</string>
    <string name="pref_auto_caps_key">AUTO_CAPS</string>
    <string name="pref_auto_match_keyboard_default">true</string>
    <string name="pref_auto_match_keyboard_key">Auto_MATCH_KEYBOARD</string>
    <string name="pref_auto_rotate_keyboard_default">false</string>
    <string name="pref_auto_rotate_keyboard_key">Auto_ROTATE_KEYBOARD</string>
    <string name="pref_braille_computer_table_default">en-US-comp8</string>
    <string name="pref_braille_computer_table_key">BRAILLE_TABLE_0</string>
    <string name="pref_braille_literary_table_default">en-g1</string>
    <string name="pref_braille_literary_table_key">BRAILLE_TABLE_1</string>
    <string name="pref_braille_active_table_key">ACTIVE_BRAILLE_TABLE</string>
    <string name="pref_braille_table_auto">auto</string>
    <string name="pref_braille_type_default">0</string>
    <string name="pref_braille_type_key">BRAILLE_GRADE_KEY</string>
    <string name="pref_default_braille_table_key">DEFAULT_BRAILLE_TABLE</string>
    <string name="pref_default_braille_table_last">last</string>
    <string name="pref_category_braille_key">BRAILLE_CATEGORY_KEY</string>
    <string name="pref_category_braille_input_key">BRAILLE_INPUT_CATEGORY</string>
    <string name="pref_category_feedback_key">KEYBOARD_FEEDBACK_Category</string>
    <string name="pref_sound_feedback_key">SOUND_FEEDBACK</string>
    <string name="pref_haptic_feedback_key">HAPTIC_FEEDBACK</string>
    <string name="pref_haptic_events_key">HAPTIC_EVENTS</string>
    <string name="pref_haptic_event_keyboard_shown_key">HAPTIC_EVENT_KEYBOARD_SHOWN</string>
    <string name="pref_haptic_event_keyboard_closed_key">HAPTIC_EVENT_KEYBOARD_CLOSED</string>
    <string name="pref_haptic_event_typing_key">HAPTIC_EVENT_TYPING</string>
    <string name="pref_haptic_event_misspelling_key">HAPTIC_EVENT_MISSPELLING</string>
    <string name="pref_haptic_event_capital_key">HAPTIC_EVENT_CAPITAL</string>
    <string name="pref_haptic_event_calibration_key">HAPTIC_EVENT_CALIBRATION</string>
    <string name="pref_haptic_event_commands_key">HAPTIC_EVENT_COMMANDS</string>
    <string name="pref_haptic_event_delete_key">HAPTIC_EVENT_DELETE</string>
    <string name="pref_haptic_event_new_line_key">HAPTIC_EVENT_NEW_LINE</string>
    <string name="pref_sound_theme_key">SOUND_THEME</string>
    <string name="pref_category_keyboard_key">KEYBOARD_CATEGORY</string>
    <string name="pref_category_misc_key">MISC</string>
    <string name="pref_category_backup_key">BACKUP_RESTORE</string>
    <string name="pref_export_settings_key">EXPORT_SETTINGS</string>
    <string name="pref_import_settings_key">IMPORT_SETTINGS</string>
    <string name="pref_default_keyboard_default">0</string>
    <string name="pref_default_keyboard_key">DEFAULT_KEYBOARD</string>
    <string name="pref_double_space_period_default">true</string>
    <string name="pref_double_space_period_key">DOUBLE_SPACE_PERIOD</string>
    <string name="pref_echo_feedback_key">KEYBOARD_ECHO</string>
    <string name="pref_echo_misspellings_default">true</string>
    <string name="pref_echo_misspellings_key">ECHO_MISSPELLING</string>
    <string name="pref_speech_events_key">SPEECH_EVENTS</string>
    <string name="pref_speech_event_keyboard_shown_key">SPEECH_EVENT_KEYBOARD_SHOWN</string>
    <string name="pref_speech_event_keyboard_closed_key">SPEECH_EVENT_KEYBOARD_CLOSED</string>
    <string name="pref_speech_event_delete_empty_key">SPEECH_EVENT_DELETE_EMPTY</string>
    <string name="pref_echo_passwords_default">false</string>
    <string name="pref_echo_passwords_key">PASSWORD_ECHO</string>
    <string name="pref_has_asked_record_audio_key">RECORD_AUDIO</string>
    <string name="pref_asked_notifications_key">ASKED_NOTIFICATIONS</string>
    <string name="pref_keyboard_feedback_key">KEYBOARD_FEEDBACK</string>
    <string name="pref_keyboard_invert_default">false</string>
    <string name="pref_keyboard_invert_key">KEYBOARD_INVERT</string>
    <string name="pref_invert_gestures_default">false</string>
    <string name="pref_invert_gestures_key">INVERT_GESTURES</string>
    <string name="pref_keyboard_fullscreen_default">false</string>
    <string name="pref_keyboard_fullscreen_key">KEYBOARD_FULLSCREEN</string>
    <string name="pref_keyboard_save_horizontal_landscape_invert_key">KEYBOARD_SAVE_HORIZONTAL_LANDSCAPE_INVERT</string>
    <string name="pref_keyboard_style_key">KEYBOARD_STYLE</string>
    <string name="pref_keyboard_style_normal_value">0</string>
    <string name="pref_privacy_default">false</string>
    <string name="pref_privacy_key">PRIVACY</string>
    <string name="pref_show_circles_default">true</string>
    <string name="pref_show_circles_key">SHOW_CIRCLE_KEY</string>
    <string name="pref_swipe_sensitivity_key">SWIPE_SENSITIVITY_KEY</string>
    <string name="pref_text_to_speech_key">TEXT_TO_SPEECH_CATEGORY</string>
    <string name="pref_use_eight_dots_default">false</string>
    <string name="pref_use_eight_dots_key">USE_EIGHT_DOT</string>
    <string name="pref_logging_key">ENABLE_LOGGING</string>
    <string name="pref_logging_default">false</string>
    <string name="pref_clear_logs_key">CLEAR_LOGS</string>
    <string name="grade">Default Braille grade</string>
    <string name="pref_auto_caps_summary">Capitalise the first word of each sentence.</string>
    <string name="pref_auto_caps_title">Auto-capitalisation</string>
    <string name="pref_auto_match_keyboard_summary">When enabled the keyboard is selected based on the position of your fingers when you manually calibrate the keyboard.</string>
    <string name="pref_auto_match_keyboard_title">Automatically select keyboard layout based on the position of your fingers</string>
    <string name="pref_braille_grade_summary">Sets the preferred Braille grade: %s</string>
    <string name="pref_category_braille_title">Braille Table Settings</string>
    <string name="pref_category_braille_input_title">Braille Input</string>
    <string name="pref_category_feedback_title">Feedback Settings</string>
    <string name="pref_category_keyboard_title">Keyboard Settings</string>
    <string name="pref_category_misc_title">Miscellaneous Settings</string>
    <string name="pref_category_backup_title">Backup and Restore</string>
    <string name="pref_default_computer_braille_table_title">Computer Braille table</string>
    <string name="pref_default_keyboard_summary">Choose the keyboard layout that is displayed by default: %s</string>
    <string name="pref_default_keyboard_title">Default Keyboard Layout</string>
    <string name="pref_default_literary_braille_table_title">Literary Braille table</string>
    <string name="pref_default_braille_table_summary">The braille table the keyboard opens with. Use the last language opens on the table you were last using: %s</string>
    <string name="pref_default_braille_table_title">Default braille table</string>
    <string name="pref_computer_braille_table_multi_summary">Check the computer braille tables you want to switch between while typing.</string>
    <string name="pref_literary_braille_table_multi_summary">Check the literary braille tables you want to switch between while typing.</string>
    <string name="pref_double_space_period_summary">Double swiping space inserts a period followed by a space.</string>
    <string name="pref_double_space_period_title">Double-space period</string>
    <string name="pref_echo_feedback_summary">Choose how the keyboard announces characters and words while typing: %s</string>
    <string name="pref_echo_feedback_title">Keyboard Echo</string>
    <string name="pref_echo_misspellings_summary">When enabled misspellings are announced when a space is typed</string>
    <string name="pref_echo_misspellings_title">Echo misspellings as you type</string>
    <string name="pref_echo_passwords_summary">When enabled the keyboard will speak during password input.</string>
    <string name="pref_sound_feedback_title">Sound Feedback</string>
    <string name="pref_sound_feedback_summary">Play sounds while typing</string>
    <string name="pref_haptic_feedback_title">Haptic Feedback</string>
    <string name="pref_haptic_feedback_summary">Vibrate while typing</string>
    <string name="pref_sound_theme_title">Sound Theme</string>
    <string name="pref_sound_theme_summary">Choose the sound theme: %s</string>
    <string name="pref_sound_theme_default">system_default</string>
    <string name="pref_keyboard_invert_summary">When the keyboard is not rotating with the phone use this setting to flip the orientation of the keyboard 180 degrees</string>
    <string name="pref_keyboard_invert_title">Invert keyboard</string>
    <string name="pref_keyboard_style_summary">Configure the layout of the dots on the keyboard: %s</string>
    <string name="pref_keyboard_style_title">Keyboard style</string>
    <string name="pref_privacy_summary">When enabled blacks out the screen as you type for privacy.</string>
    <string name="pref_privacy_title">Privacy screen</string>
    <string name="pref_show_circles_summary">When enabled small circles are displayed to indicate the on screen position of each Braille dot</string>
    <string name="pref_show_circles_title">Show circles on screen?</string>
    <string name="pref_swipe_sensitivity_summary">Swipe sensitivity: %s</string>
    <string name="pref_swipe_sensitivity_title">Swipe sensitivity</string>
    <string name="pref_logging_title">Enable logging</string>
    <string name="pref_logging_summary">Write diagnostic information about the device and the keyboard to a log file to help solve problems</string>
    <string name="pref_clear_logs_title">Clear logs</string>
    <string name="pref_clear_logs_summary">Delete the diagnostic log file written by the keyboard</string>
    <string name="theme_info_name">Name:</string>
    <string name="theme_info_version">Version:</string>
    <string name="theme_info_author">Author:</string>
    <string name="pref_text_to_speech_title">Text To Speech Settings</string>
    <string name="pref_use_eight_dots_summary">When enabled shows dots 7 and 8.</string>
    <string name="pref_use_eight_dots_title">Show eight dot keyboard</string>
    <string name="rotate_keyboard">Rotate keyboard with device</string>
    <string name="rotate_summary">When enabled the keyboard will be oriented according to the orientation of the device.</string>
    <string name="select_all">Select all</string>
    <string name="settings_name">Soft Braille Keyboard Settings</string>
    <string name="speak_passwords">Speak passwords</string>
    <string name="pref_customize_gestures_key">CUSTOMIZE_GESTURES</string>
    <string name="pref_customize_gestures_title">Customize gestures</string>
    <string name="pref_customize_gestures_summary">Choose which action each swipe performs</string>
    <string name="pref_customize_touch_hold_key">CUSTOMIZE_TOUCH_HOLD</string>
    <string name="pref_customize_touch_hold_title">Customize touch-hold commands</string>
    <string name="pref_customize_touch_hold_summary">Choose which action each touch-hold command performs</string>
    <string name="abbreviation_editor_add">Add abbreviation</string>
    <string name="abbreviation_editor_delete_selected">Delete selected</string>
    <string name="abbreviation_editor_select">Select</string>
    <string name="abbreviation_editor_import">Import from a file</string>
    <string name="abbreviation_editor_export">Export to a file</string>
    <string name="abbreviation_editor_delete_all">Delete all</string>
    <string name="abbreviation_editor_empty">No abbreviations yet. Use Add abbreviation to create your first one.</string>
</resources>