<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

    <!-- Root settings screen. Each entry opens a separate activity (see
         PreferenceIME) containing that section's preferences. -->
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/settings_name">
         <Preference
             android:key="@string/pref_category_keyboard_key"
             android:title="@string/pref_category_keyboard_title" />
         <Preference
             android:key="@string/pref_category_braille_key"
             android:title="@string/pref_category_braille_title" />
         <Preference
             android:key="@string/pref_category_braille_input_key"
             android:title="@string/pref_category_braille_input_title" />
         <Preference
             android:key="@string/pref_category_feedback_key"
             android:title="@string/pref_category_feedback_title" />
         <Preference
             android:key="@string/pref_text_to_speech_key"
             android:title="@string/pref_text_to_speech_title" />
         <Preference
             android:key="@string/pref_category_misc_key"
             android:title="@string/pref_category_misc_title" />
         <Preference
             android:key="@string/pref_category_backup_key"
             android:title="@string/pref_category_backup_title" />
         <Preference
         android:key="@string/pref_app_version_key" />
</PreferenceScreen>
