<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/pref_category_misc_title">
         <ListPreference
             android:key="@string/pref_swipe_sensitivity_key"
             android:title="@string/pref_swipe_sensitivity_title"
             android:summary="@string/pref_swipe_sensitivity_summary"
             android:entries="@array/swipe_sensitivity_entries"
             android:entryValues="@array/swipe_sensitivity_values"
             android:defaultValue="@string/default_swipe_sensitivity" />
         <CheckBoxPreference
             android:key="@string/pref_logging_key"
             android:title="@string/pref_logging_title"
             android:summary="@string/pref_logging_summary"
             android:defaultValue="@string/pref_logging_default" />
         <Preference
             android:key="@string/pref_clear_logs_key"
             android:title="@string/pref_clear_logs_title"
             android:summary="@string/pref_clear_logs_summary" />
</PreferenceScreen>
