<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Its title changes to "Done" while select mode is active. -->
    <item
        android:id="@+id/action_select"
        android:orderInCategory="100"
        android:title="@string/abbreviation_editor_select" />

    <!-- Not implemented yet; tapping does nothing. -->
    <item
        android:id="@+id/action_import"
        android:orderInCategory="200"
        android:title="@string/abbreviation_editor_import" />

    <!-- Not implemented yet; tapping does nothing. -->
    <item
        android:id="@+id/action_export"
        android:orderInCategory="300"
        android:title="@string/abbreviation_editor_export" />

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="400"
        android:title="@string/abbreviation_editor_delete_all" />

</menu>
